modifica el subtitulo
ahora es un parrafo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Bienvenido a la web del Estudio Fotográfico MyGod</h1>
-	<h2>Esta es la página donde encontras de todo a él</h2>
+	<p>Esta es la página donde encontras de todo a él</p>
 </body>
 </html>
