--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>Bienvenido a la web del Estudio Fotográfico MyGod</h1>
 	<p>Esta es la página donde encontras de todo a él</p>
 	<br/>
+	<p>Sera con estos datos</p>
 </body>
 </html>
